--- a/administrador/templates/editar_datos_paciente_admin.html
+++ b/administrador/templates/editar_datos_paciente_admin.html
@@ -6,6 +6,8 @@
 
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'css/editar_datos_paciente_admin.css' %}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
 {% endblock %}
 
 {% block header %}
@@ -192,10 +194,21 @@
 </form>
 
 <script>
-    function mostrarMensajeExito() {
-        alert('¡Cambios Guardados Exitosamente!');
-        return true; // Permitir que el formulario se envíe
-    }
+    document.addEventListener("DOMContentLoaded", function() {
+        {% if messages %}
+            {% for message in messages %}
+                Swal.fire({
+                    title: '¡Éxito al Guardar!',
+                    icon: 'success',
+                    confirmButtonText: 'Aceptar',
+                    confirmButtonColor: '#3085d6',
+                    background: '#f0f0f0',
+                    timer: 2000,
+                });
+            {% endfor %}
+        {% endif %}
+    });
+
 
     document.getElementById("boton-cancelar").addEventListener("click", function(){
         window.location.href = "{% url 'admin_pacientes' %}";
@@ -243,4 +256,5 @@
 </script>
 <script src="{% static 'js/formatear-rut.js' %}"></script>
 <script src="{% static 'js/formatear-telefono.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% endblock %}
