--- a/recepcionista/templates/mostrar_paciente.html
+++ b/recepcionista/templates/mostrar_paciente.html
@@ -3,10 +3,16 @@
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/mostrar_paciente.css' %}">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <div class="container-paciente">
-    <div class="back-arrow" onclick="window.location.href='{% url 'recepcionista_pacientes_activos' %}';">
-        &#8592; Regresar
+    <div class="header-container">
+        <div class="back-arrow" onclick="window.location.href='{% url 'recepcionista_pacientes_activos' %}';">
+            &#8592; Regresar
+        </div>
+        <div class="edit-icon" onclick="window.location.href='{% url 'editar_datos_paciente_recepcionista' paciente.id %}'">
+            <i class="fas fa-pencil-alt"></i>
+        </div>
+
     </div>
 
     <h1>Información Paciente</h1>
