--- a/autenticacion/templates/password_reset_confirm.html
+++ b/autenticacion/templates/password_reset_confirm.html
@@ -1,47 +1,85 @@
-{% load static %}
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restablecer contraseña</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Restablecer Contraseña</title>
     <!-- Fuente JOST -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Estilos CSS -->
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/password_reset.css' %}">
-</head>
-<body class="contenedor">
-
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'styles/password-reset/password_reset_confirm.css' %}"
+    />
+  </head>
+  <body class="contenedor">
     <!-- Logos -->
-    <img src="{% static 'images/logo_universidad_blanco.svg' %}" alt="Logo Universidad Autónoma" class="logo-top-left">
-    <img src="{% static 'images/logo_hospital_blanco.svg' %}" alt="Logo Hospital" class="logo-top-right">
+    <img
+      src="{% static 'images/logo_universidad_blanco.svg' %}"
+      alt="Logo Universidad Autónoma"
+      class="logo-top-left"
+    />
+    <img
+      src="{% static 'images/logo_hospital_blanco.svg' %}"
+      alt="Logo Hospital"
+      class="logo-top-right"
+    />
 
-    <!-- Contenedor de restablecer contraseña -->
-    <div class="password_reset-contenedor">
-        <h2>Ingrese la nueva contraseña</h2>
-        
-        <!-- Formulario para restablecer contraseña -->
-        <form method="post">
-            {% csrf_token %}
-            
-            <div class="input-password_reset">
-                <label for="{{ form.new_password1.id_for_label }}" class="visually-hidden">Nueva contraseña</label>
-                {{ form.new_password1 }}
-                {{ form.new_password1.errors }}
-            </div>
-    
-            <div class="input-password_reset">
-                <label for="{{ form.new_password2.id_for_label }}" class="visually-hidden">Confirmar contraseña</label>
-                {{ form.new_password2 }}
-                {{ form.new_password2.errors }}
-            </div>
-    
-            <button type="submit" class="btn">Restablecer contraseña</button>
-        </form>
+    <!-- Contenedor de restablecimiento de contraseña -->
+    <div class="contenedor-central">
+      <h2>Restablecer Contraseña</h2>
+      <hr />
+      <form method="POST">
+        {% csrf_token %}
+        <div class="inputs-contenedor">
+          <div class="input-password">
+            {{ form.new_password1.errors }}
+            <input
+              type="password"
+              name="new_password1"
+              id="id_new_password1"
+              placeholder="Contraseña nueva"
+              required
+            />
+          </div>
+          <div class="input-password">
+            {{ form.new_password2.errors }}
+            <input
+              type="password"
+              name="new_password2"
+              id="id_new_password2"
+              placeholder="Confirmar nueva contraseña"
+              required
+            />
+          </div>
+        </div>
+        <button type="submit" class="btn">Restablecer Contraseña</button>
+      </form>
+
+      {% if messages %}
+      <div class="messages">
+        <ul>
+          {% for message in messages %}
+          <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endif %} {% if form.errors %}
+      <div class="error-messages">
+        <ul>
+          {% for field, errors in form.errors.items %} {% for error in errors %}
+          <li>{{ error }}</li>
+          {% endfor %} {% endfor %}
+        </ul>
+      </div>
+      {% endif %}
     </div>
-
-</body>
+  </body>
 </html>
