--- a/autenticacion/templates/password_reset_form.html
+++ b/autenticacion/templates/password_reset_form.html
@@ -1,43 +1,68 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperar contraseña</title>
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/password_reset.css' %}">
-</head>
-<body class="contenedor">
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Recuperar Contraseña</title>
+    <!-- Fuente JOST -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Estilos CSS -->
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'styles/password-reset/password_reset_form.css' %}"
+    />
+  </head>
+  <body class="contenedor">
     <!-- Logos -->
-    <img src="{% static 'images/logo_universidad_blanco.svg' %}" alt="Logo Universidad Autónoma" class="logo-top-left">
-    <img src="{% static 'images/logo_hospital_blanco.svg' %}" alt="Logo Hospital" class="logo-top-right">
+    <img
+      src="{% static 'images/logo_universidad_blanco.svg' %}"
+      alt="Logo Universidad Autónoma"
+      class="logo-top-left"
+    />
+    <img
+      src="{% static 'images/logo_hospital_blanco.svg' %}"
+      alt="Logo Hospital"
+      class="logo-top-right"
+    />
 
-    <!-- Contenedor de recuperar contraseña -->
-    <div class="password_reset-contenedor">
-        <h2>Recuperar contraseña</h2>
-        <h3>Por favor, ingresa tu dirección de correo electrónico asociada con tu cuenta. Te enviaremos un enlace para restablecer tu contraseña.</h3>
-        
+    <!-- Contenedor de recuperación de contraseña -->
+    <div class="contenedor-central">
+      <h2>Recuperar Contraseña</h2>
+      <hr />
+      <p>
+        Por favor, ingresa tu dirección de correo electrónico asociada con tu
+        cuenta. Te enviaremos un enlace para restablecer tu contraseña.
+      </p>
+      <!-- Formulario de recuperación de contraseña -->
+      <form method="POST" action="{% url 'password_reset' %}">
+        {% csrf_token %}
         <div class="inputs-contenedor">
-            <h2 class="no-border">Correo electrónico</h2>
+          {{ form.non_field_errors }}
 
-            <!-- Mostrar errores de validación -->
-            {% if form.errors %}
-                <div class="error-message">
-                    {{ form.errors.email }} <!-- Muestra el error del campo email -->
-                </div>
-            {% endif %}
-
-            <form method="post" action="{% url 'password_reset' %}">
-                {% csrf_token %}
-                <div class="input-password_reset">
-                    {{ form.email }}  <!-- Renderiza el campo de correo electrónico -->
-                </div>
-                <button type="submit" class="btn">Enviar enlace de recuperación</button>
-            </form>
+          <!-- Input para el correo electrónico -->
+          <div class="input-email">
+            {{ form.email.errors }}
+            <input
+              type="email"
+              name="email"
+              id="id_email"
+              placeholder="Ingrese su correo electrónico"
+              required
+            />
+          </div>
+          <!-- Botón para enviar el formulario -->
+          <button type="submit" class="btn">
+            Enviar enlace de recuperación
+          </button>
         </div>
+      </form>
     </div>
-
-</body>
+  </body>
 </html>
