Lista de terpaeutas activos (Recepcionista)

--- a/ortesisWeb/templates/recepcionista_base.html
+++ b/ortesisWeb/templates/recepcionista_base.html
@@ -15,7 +15,7 @@
     <!-- Estilos generales -->
     <link rel="stylesheet" href="{% static 'css/base/grid.css' %}">
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-    
+    <link rel="stylesheet" href="{% static 'css/recepcionista.css' %}">
     <!-- Bloque adicional para cargar estilos CSS o meta tags específicos -->
     {% block extra_head %}{% endblock %}
 </head>
