--- a/administrador/static/styles/mostrar_paciente.css
+++ b/administrador/static/styles/mostrar_paciente.css
@@ -159,6 +159,30 @@ strong {
     height: 24px;
 }
 
+.btn-reactivar {
+    position: absolute; /* Permite colocar el ícono en una posición específica */
+    top: 10px; /* Ajusta la distancia desde la parte superior */
+    right: 10px; /* Ajusta la distancia desde la parte derecha */
+    cursor: pointer;
+    background-color: white;
+    color: #001058;
+    padding: 7px 15px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight:bold;
+    cursor: pointer;
+    margin: 20px;
+    margin-top: 15px;
+    transition: 0.1s;
+    text-decoration: none;
+}
+
+.btn-reactivar:hover {
+    background-color: #001058; /* Color de fondo al pasar el mouse */
+    color: white;
+}
+
 .footer-container {
     padding: 1rem; /* Espaciado interno */
     background-color: #001058; /* Color de fondo del footer */
