--- a/administrador/templates/mostrar_paciente_administrador.html
+++ b/administrador/templates/mostrar_paciente_administrador.html
@@ -3,12 +3,20 @@
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'styles/mostrar_paciente.css' %}">
+<link rel="stylesheet" href="{% static 'styles/modal.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <header>
-<a class="back-arrow" href="{% url 'admin_pacientes' %}">
-    <img src="{% static 'icons/Volver-atras.svg' %}" alt="">
-</a>
+
+{% if paciente.is_active%}
+    <a class="back-arrow" href="{% url 'listar_pacientes_activos' %}">
+        <img src="{% static 'icons/Volver-atras.svg' %}" alt="">
+    </a>
+{% else %}
+    <a class="back-arrow" href="{% url 'listar_pacientes_inactivos' %}">
+        <img src="{% static 'icons/Volver-atras.svg' %}" alt="">
+    </a>
+{% endif %}
 <h1>Paciente {{paciente.first_name}} {{paciente.last_name}}</h1>
 </header>  
 
@@ -104,35 +112,13 @@
 {% endblock %}
 
 {% block extra_js %}
+
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        const checkboxes = document.querySelectorAll('.paciente-checkbox');
-        const selectAllCheckbox = document.getElementById('select-all');
-        const inactivarBtn = document.getElementById('inactivar-btn');
         const restaurarBtn = document.getElementById('restaurar-btn');
-
-        if (selectAllCheckbox) {
-            selectAllCheckbox.addEventListener('change', function() {
-                checkboxes.forEach(checkbox => {
-                    checkbox.checked = selectAllCheckbox.checked;
-                });
-                updateButtonsState();
-            });
-        }
-
-        checkboxes.forEach(checkbox => {
-            checkbox.addEventListener('change', updateButtonsState);
-        });
 
         function updateButtonsState() {
             const selectedCheckboxes = Array.from(checkboxes).filter(checkbox => checkbox.checked);
-            
-            if (inactivarBtn) {
-                inactivarBtn.disabled = selectedCheckboxes.length === 0 || !selectedCheckboxes.some(checkbox => {
-                    const badge = checkbox.closest('tr').querySelector('td:nth-child(4) .badge');
-                    return badge.textContent.trim() === 'Activo';
-                });
-            }
 
             if (restaurarBtn) {
                 restaurarBtn.disabled = selectedCheckboxes.length === 0 || !selectedCheckboxes.some(checkbox => {
@@ -140,49 +126,14 @@
                     return badge.textContent.trim() === 'Inactivo';
                 });
             }
-        }
-
-        if (inactivarBtn) {
-            inactivarBtn.addEventListener('click', function() {
-                mostrarPopUpCambioEstado('inactivo');
-            });
-        }
 
         if (restaurarBtn) {
             restaurarBtn.addEventListener('click', function() {
                 mostrarPopUpCambioEstado('activo');
             });
+            }
         }
 
-        // Pop-up para varios pacientes
-        window.mostrarPopUpCambioEstado = function(estado) {
-            const selectedCheckboxes = Array.from(checkboxes).filter(cb => cb.checked);
-            const cantidadSeleccionados = selectedCheckboxes.length;
-            const titulo = estado === 'inactivo' ? 'Cambiar a estado inactivo' : 'Restaurar a estado activo';
-            const mensaje = estado === 'inactivo' 
-                ? `¿Desea cambiar a estado inactivo a ${cantidadSeleccionados} pacientes? Los pacientes podrán ser visualizados y reactivados en la sección de inactivos.`
-                : `¿Desea restaurar a estado activo a ${cantidadSeleccionados} pacientes? Los pacientes podrán ser visualizados en la sección de activos y se considerarán como pacientes en tratamiento.`;
-
-            document.getElementById('popup-titulo').textContent = titulo;
-            document.getElementById('popup-mensaje').textContent = mensaje;
-            document.getElementById('popupModal').style.display = 'block';
-
-            document.getElementById('confirmButton').setAttribute('data-estado', estado);
-            document.getElementById('confirmButton').setAttribute('data-ids', JSON.stringify(selectedCheckboxes.map(cb => cb.value)));
-        };
-
-        // Pop-up individual para un paciente
-        window.mostrarPopUpInactivar = function(pacienteId, nombre, rut) {
-            const titulo = `Cambiar a estado inactivo a ${nombre}`;
-            const mensaje = `¿Está seguro de que desea inactivar al paciente ${nombre} (${rut})? Este paciente podrá ser reactivado en la sección de inactivos.`;
-
-            document.getElementById('popup-titulo').textContent = titulo;
-            document.getElementById('popup-mensaje').textContent = mensaje;
-            document.getElementById('popupModal').style.display = 'block';
-
-            document.getElementById('confirmButton').setAttribute('data-estado', 'inactivo');
-            document.getElementById('confirmButton').setAttribute('data-ids', JSON.stringify([pacienteId]));
-        };
         window.mostrarPopUpRestaurar = function(id, nombre) {
             document.getElementById('popup-titulo').textContent = `Restaurar paciente`;
             document.getElementById('popup-mensaje').textContent = `¿Está seguro de que desea restaurar a ${nombre}?`;
@@ -190,6 +141,7 @@
         
             document.getElementById('confirmButton').setAttribute('data-estado', 'activo');
             document.getElementById('confirmButton').setAttribute('data-ids', JSON.stringify([id]));
+
         };
 
         window.cerrarPopUp = function() {
@@ -200,7 +152,7 @@
             const estado = document.getElementById('confirmButton').getAttribute('data-estado');
             const selectedIds = JSON.parse(document.getElementById('confirmButton').getAttribute('data-ids'));
 
-            const url = estado === 'inactivo' ? "{% url 'cambiar_estado_inactivo' %}" : "{% url 'restaurar_paciente' %}";
+            const url = estado === 'inactivo' ? "{% url 'agregar_paciente_admin' %}" : "{% url 'restaurar_paciente' %}";
 
             fetch(url, {
                 method: 'POST',
@@ -213,7 +165,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.status === 'success') {
-                    location.reload();
+                    window.location.href = "{% url 'listar_pacientes_activos' %}";
                 } else {
                     alert(`Error al ${estado === 'inactivo' ? 'inactivar' : 'restaurar'} los pacientes.`);
                 }
@@ -222,7 +174,7 @@
             cerrarPopUp();
         };
     });
-    
 </script>
-<script src="{% static 'js/admin_buscador_paciente.js' %}"></script>
+    
+
 {% endblock %}
