--- a/recepcionista/templates/recepcionista_pacientes.html
+++ b/recepcionista/templates/recepcionista_pacientes.html
@@ -68,13 +68,13 @@
                 <td class="centro-tabla">{{ paciente.rut }}</td>
                 <td class="centro-tabla">
                     <span class="badge {% if paciente.is_active %}bg-success{% else %}bg-secondary{% endif %}">
-                        {% if paciente.is_active %}Activo{% else %}Inactivo{% endif %}
+                        {% if paciente.is_active %}Activo <img class = "img-activo" src="{% static "icons/activo.svg" %}"> {% else %}Inactivo <img class = "img-activo" src="{% static "icons/inactivo.svg" %}"> {% endif %}
                     </span>
                 </td>
-                <td class="centro-tabla">{% if paciente.terapeuta %}{{ paciente.terapeuta.nombre }}{% else %}Sin terapeuta{% endif %}</td>
+                <td class="centro-tabla">{% if paciente.terapeuta %}{{ paciente.terapeuta.user.first_name }} {{ paciente.terapeuta.user.last_name }}{% else %}Sin terapeuta{% endif %}</td>
                 <td class="centro-tabla">{{ paciente.date_joined }}</td>
                 <td class="final-tabla">
-                    <a href="{% url 'mostrar_paciente_administrador' paciente.id %}" class="btn btn-outline-danger btn-sm" title="Ver detalle paciente" 
+                    <a href="{% url 'mostrar_paciente_recepcionista' paciente.id %}" class="btn btn-outline-danger btn-sm" title="Ver detalle paciente" 
                         onclick="mostrarPopUp('{{ paciente.id }}', '{{ paciente.first_name }} {{ paciente.last_name }}', '{{ paciente.rut }}', '{{ paciente.patologia }}')">
                         <img src="{% static 'icons/Detalle.svg' %}" alt="Ver Detalle" />
                     </a>
